// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie Image renders correctly with broken source 1`] = `
<Image
  isMyMovie={false}
  onError={[Function]}
  source={
    Object {
      "uri": "https://broken-image-src.png",
    }
  }
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 200,
        "marginRight": 20,
        "width": 150,
      },
    ]
  }
/>
`;

exports[`Movie Image renders correctly with no source 1`] = `
<Image
  isMyMovie={false}
  onError={[Function]}
  source={
    Object {
      "testUri": "../../../assets/images/film-poster-placeholder.png",
    }
  }
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 200,
        "marginRight": 20,
        "width": 150,
      },
    ]
  }
/>
`;

exports[`Movie Image renders correctly with working source 1`] = `
<Image
  isMyMovie={false}
  onError={[Function]}
  source={
    Object {
      "uri": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1200px-React-icon.svg.png",
    }
  }
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 200,
        "marginRight": 20,
        "width": 150,
      },
    ]
  }
/>
`;

exports[`Movie Image renders correctly with working source and isMyMovie flag set to true 1`] = `
<Image
  isMyMovie={true}
  onError={[Function]}
  source={
    Object {
      "uri": "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1200px-React-icon.svg.png",
    }
  }
  style={
    Array [
      Object {
        "borderBottomLeftRadius": 10,
        "borderBottomRightRadius": 10,
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": 100,
        "marginRight": 10,
        "width": 100,
      },
    ]
  }
/>
`;
